--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Roman Paradeev <sameoldmadness@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.15.0",
     "bootstrap": "3.3.6",
     "express": "4.13.4",
     "jquery": "2.2.3",
-    "jqueryui-browser": "1.10.2-1"
+    "jqueryui-browser": "1.10.2-1",
+    "timing.js": "1.1.0"
   }
 }
