--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "optimize-svg": "svgo -f static/img/emoji/svg",
-    "bundle-svg": "cat static/img/emoji/svg/* > static/img/emoji/svg/_bundle.svg"
+    "bundle-svg": "cat static/img/emoji/svg/* > static/img/emoji/svg/_bundle.svg",
+    "resize-png": "mogrify -resize 600 static/img/cats/*.jpg",
+    "optimize-png": "imagemin --progressive static/img/cats/* static/img/cats"
   },
   "keywords": [
     "performance",
@@ -23,6 +25,7 @@
     "timing.js": "1.1.0"
   },
   "devDependencies": {
+    "imagemin-cli": "2.1.0",
     "svgo": "0.6.4"
   }
 }
