--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "1.15.0",
     "bootstrap": "3.3.6",
+    "compression": "1.6.1",
     "express": "4.13.4",
     "jquery": "2.2.3",
     "timing.js": "1.1.0"
